--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,4 @@ add_exercise(TP3_exo1_triangle_blanc)
 add_exercise(TP3_exo2_triangle_couleurs)
 add_exercise(TP3_exo5_disque)
 add_exercise(TP3_exo6_buffer_index)
+add_exercise(TP4_exo1)
