--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,4 @@ add_exercise(TP3_exo2_triangle_couleurs)
 add_exercise(TP3_exo5_disque)
 add_exercise(TP3_exo6_buffer_index)
 add_exercise(TP4_exo1)
+add_exercise(TP4_exo2)
