merci Lucie pour Mandelbrot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,3 +52,4 @@ add_exercise(TP3_exo5_disque)
 add_exercise(TP3_exo6_buffer_index)
 add_exercise(TP4_exo1)
 add_exercise(TP4_exo2)
+add_exercise(TP4_exo3_mandelbrot)
