tp4, préparer la suite (triangle rouge) ok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,3 +53,4 @@ add_exercise(TP3_exo6_buffer_index)
 add_exercise(TP4_exo1)
 add_exercise(TP4_exo2)
 add_exercise(TP4_exo3_mandelbrot)
+add_exercise(TP4_exo4_preparer_la_suite)
