--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,3 +54,4 @@ add_exercise(TP4_exo1)
 add_exercise(TP4_exo2)
 add_exercise(TP4_exo3_mandelbrot)
 add_exercise(TP4_exo4_preparer_la_suite)
+add_exercise(TP6_exo1_sphere)
