tout tout début lune

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,3 +55,4 @@ add_exercise(TP4_exo2)
 add_exercise(TP4_exo3_mandelbrot)
 add_exercise(TP4_exo4_preparer_la_suite)
 add_exercise(TP6_exo1_sphere)
+add_exercise(TP6_exo2_lune)
